examples/elliptic_wing_TCl/parser.out
shift/reduce conflict in state 62 resolved as shift.
shift/reduce conflict in state 65 resolved as shift.
shift/reduce conflict in state 68 resolved as shift.
shift/reduce conflict in state 71 resolved as shift.
shift/reduce conflict in state 74 resolved as shift.
shift/reduce conflict in state 76 resolved as shift.
shift/reduce conflict in state 79 resolved as shift.
shift/reduce conflict in state 111 resolved as shift.
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 115 resolved as shift.
shift/reduce conflict in state 115 resolved as shift.
shift/reduce conflict in state 116 resolved as shift.
shift/reduce conflict in state 116 resolved as shift.
shift/reduce conflict in state 117 resolved as shift.
shift/reduce conflict in state 117 resolved as shift.
shift/reduce conflict in state 118 resolved as shift.
shift/reduce conflict in state 118 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 120 resolved as shift.
shift/reduce conflict in state 120 resolved as shift.
shift/reduce conflict in state 121 resolved as shift.
shift/reduce conflict in state 122 resolved as shift.
shift/reduce conflict in state 123 resolved as shift.
shift/reduce conflict in state 123 resolved as shift.
shift/reduce conflict in state 124 resolved as shift.
shift/reduce conflict in state 124 resolved as shift.
shift/reduce conflict in state 127 resolved as shift.
shift/reduce conflict in state 132 resolved as shift.
shift/reduce conflict in state 139 resolved as shift.
shift/reduce conflict in state 146 resolved as shift.
shift/reduce conflict in state 148 resolved as shift.
shift/reduce conflict in state 251 resolved as shift.
shift/reduce conflict in state 258 resolved as shift.
shift/reduce conflict in state 261 resolved as shift.
shift/reduce conflict in state 264 resolved as shift.
shift/reduce conflict in state 267 resolved as shift.
shift/reduce conflict in state 270 resolved as shift.
shift/reduce conflict in state 277 resolved as shift.
shift/reduce conflict in state 280 resolved as shift.
shift/reduce conflict in state 283 resolved as shift.
shift/reduce conflict in state 284 resolved as shift.
shift/reduce conflict in state 285 resolved as shift.
shift/reduce conflict in state 286 resolved as shift.
shift/reduce conflict in state 286 resolved as shift.
shift/reduce conflict in state 287 resolved as shift.
shift/reduce conflict in state 287 resolved as shift.
shift/reduce conflict in state 288 resolved as shift.
shift/reduce conflict in state 288 resolved as shift.
shift/reduce conflict in state 289 resolved as shift.
shift/reduce conflict in state 289 resolved as shift.
shift/reduce conflict in state 290 resolved as shift.
shift/reduce conflict in state 290 resolved as shift.
shift/reduce conflict in state 291 resolved as shift.
shift/reduce conflict in state 291 resolved as shift.
shift/reduce conflict in state 292 resolved as shift.
shift/reduce conflict in state 292 resolved as shift.
shift/reduce conflict in state 293 resolved as shift.
shift/reduce conflict in state 293 resolved as shift.
shift/reduce conflict in state 296 resolved as shift.
shift/reduce conflict in state 330 resolved as shift.
shift/reduce conflict in state 333 resolved as shift.
shift/reduce conflict in state 335 resolved as shift.
shift/reduce conflict in state 338 resolved as shift.
shift/reduce conflict in state 376 resolved as shift.
shift/reduce conflict in state 382 resolved as shift.
shift/reduce conflict in state 385 resolved as shift.
shift/reduce conflict in state 388 resolved as shift.
shift/reduce conflict in state 391 resolved as shift.
shift/reduce conflict in state 394 resolved as shift.
shift/reduce conflict in state 401 resolved as shift.
shift/reduce conflict in state 403 resolved as shift.
shift/reduce conflict in state 406 resolved as shift.
shift/reduce conflict in state 407 resolved as shift.
shift/reduce conflict in state 408 resolved as shift.
shift/reduce conflict in state 409 resolved as shift.
shift/reduce conflict in state 409 resolved as shift.
shift/reduce conflict in state 410 resolved as shift.
shift/reduce conflict in state 410 resolved as shift.
shift/reduce conflict in state 411 resolved as shift.
shift/reduce conflict in state 411 resolved as shift.
shift/reduce conflict in state 412 resolved as shift.
shift/reduce conflict in state 412 resolved as shift.
shift/reduce conflict in state 413 resolved as shift.
shift/reduce conflict in state 413 resolved as shift.
shift/reduce conflict in state 414 resolved as shift.
shift/reduce conflict in state 414 resolved as shift.
shift/reduce conflict in state 415 resolved as shift.
shift/reduce conflict in state 415 resolved as shift.
shift/reduce conflict in state 416 resolved as shift.
shift/reduce conflict in state 416 resolved as shift.
shift/reduce conflict in state 419 resolved as shift.
shift/reduce conflict in state 424 resolved as shift.
shift/reduce conflict in state 427 resolved as shift.
shift/reduce conflict in state 429 resolved as shift.
shift/reduce conflict in state 432 resolved as shift.


Unused terminals:


Grammar

Rule 1     statement -> expr
Rule 2     expr -> expr PLUS term
Rule 3     expr -> expr MINUS term
Rule 4     expr -> ZERO PLUS expr
Rule 5     expr -> ZERO MINUS expr
Rule 6     expr -> expr PLUS ZERO
Rule 7     expr -> expr MINUS ZERO
Rule 8     expr -> ZERO PLUS ZERO
Rule 9     expr -> ZERO MINUS ZERO
Rule 10    expr -> term
Rule 11    term -> term TIMES fact
Rule 12    term -> term DIVIDE fact
Rule 13    term -> term TIMES ZERO
Rule 14    term -> term DIVIDE ZERO
Rule 15    term -> ZERO TIMES term
Rule 16    term -> ZERO DIVIDE term
Rule 17    term -> ZERO TIMES ZERO
Rule 18    term -> ZERO DIVIDE ZERO
Rule 19    term -> fact
Rule 20    fact -> MINUS min
Rule 21    fact -> PLUS min
Rule 22    fact -> MINUS ZERO
Rule 23    fact -> PLUS ZERO
Rule 24    fact -> fact POW fact
Rule 25    fact -> fact POW ZERO
Rule 26    fact -> ZERO POW fact
Rule 27    fact -> ZERO POW ZERO
Rule 28    fact -> MAX LPAREN fact COMMA fact RPAREN
Rule 29    fact -> MIN LPAREN fact COMMA fact RPAREN
Rule 30    fact -> CMP LPAREN fact COMMA fact RPAREN
Rule 31    fact -> EXP LPAREN fact RPAREN
Rule 32    fact -> LOG LPAREN fact RPAREN
Rule 33    fact -> COS LPAREN fact RPAREN
Rule 34    fact -> SIN LPAREN fact RPAREN
Rule 35    fact -> TAN LPAREN fact RPAREN
Rule 36    fact -> ACOS LPAREN fact RPAREN
Rule 37    fact -> ASIN LPAREN fact RPAREN
Rule 38    fact -> ATAN LPAREN fact RPAREN
Rule 39    fact -> INT LPAREN fact RPAREN
Rule 40    fact -> ABS LPAREN fact RPAREN
Rule 41    fact -> SQRT LPAREN fact RPAREN
Rule 42    fact -> MAX LPAREN expr COMMA expr RPAREN
Rule 43    fact -> MIN LPAREN expr COMMA expr RPAREN
Rule 44    fact -> CMP LPAREN expr COMMA expr RPAREN
Rule 45    fact -> EXP LPAREN expr RPAREN
Rule 46    fact -> LOG LPAREN expr RPAREN
Rule 47    fact -> COS LPAREN expr RPAREN
Rule 48    fact -> SIN LPAREN expr RPAREN
Rule 49    fact -> TAN LPAREN expr RPAREN
Rule 50    fact -> ACOS LPAREN expr RPAREN
Rule 51    fact -> ASIN LPAREN expr RPAREN
Rule 52    fact -> ATAN LPAREN expr RPAREN
Rule 53    fact -> INT LPAREN expr RPAREN
Rule 54    fact -> ABS LPAREN expr RPAREN
Rule 55    fact -> SQRT LPAREN expr RPAREN
Rule 56    fact -> EXP LPAREN ZERO RPAREN
Rule 57    fact -> LOG LPAREN ZERO RPAREN
Rule 58    fact -> COS LPAREN ZERO RPAREN
Rule 59    fact -> SIN LPAREN ZERO RPAREN
Rule 60    fact -> TAN LPAREN ZERO RPAREN
Rule 61    fact -> ACOS LPAREN ZERO RPAREN
Rule 62    fact -> ASIN LPAREN ZERO RPAREN
Rule 63    fact -> ATAN LPAREN ZERO RPAREN
Rule 64    fact -> INT LPAREN ZERO RPAREN
Rule 65    fact -> ABS LPAREN ZERO RPAREN
Rule 66    fact -> SQRT LPAREN ZERO RPAREN
Rule 67    fact -> min
Rule 68    min -> NUMBER
Rule 69    min -> VARIABLE
Rule 70    min -> INTEGER
Rule 71    min -> DERIVATE ZERO
Rule 72    min -> LPAREN expr RPAREN
Rule 73    min -> LPAREN ZERO RPAREN
Rule 74    min -> DERIVATE LPAREN dexpr RPAREN
Rule 75    min -> DERIVATE LPAREN ZERO RPAREN
Rule 76    dexpr -> expr2 PLUS term2
Rule 77    dexpr -> expr2 MINUS term2
Rule 78    dexpr -> ZERO PLUS expr2
Rule 79    dexpr -> ZERO MINUS expr2
Rule 80    dexpr -> expr2 PLUS ZERO
Rule 81    dexpr -> expr2 MINUS ZERO
Rule 82    dexpr -> ZERO PLUS ZERO
Rule 83    dexpr -> ZERO MINUS ZERO
Rule 84    dexpr -> dterm
Rule 85    dterm -> term2 TIMES fact2
Rule 86    dterm -> term2 DIVIDE fact2
Rule 87    dterm -> ZERO TIMES term2
Rule 88    dterm -> ZERO DIVIDE term2
Rule 89    dterm -> term2 TIMES ZERO
Rule 90    dterm -> term2 DIVIDE ZERO
Rule 91    dterm -> ZERO TIMES ZERO
Rule 92    dterm -> ZERO DIVIDE ZERO
Rule 93    dterm -> dfact
Rule 94    dfact -> MINUS min2
Rule 95    dfact -> PLUS min2
Rule 96    dfact -> MINUS ZERO
Rule 97    dfact -> PLUS ZERO
Rule 98    dfact -> fact2 POW fact2
Rule 99    dfact -> fact2 POW ZERO
Rule 100   dfact -> ZERO POW fact2
Rule 101   dfact -> ZERO POW ZERO
Rule 102   dfact -> MAX LPAREN fact2 COMMA fact2 RPAREN
Rule 103   dfact -> MIN LPAREN fact2 COMMA fact2 RPAREN
Rule 104   dfact -> CMP LPAREN fact2 COMMA fact2 RPAREN
Rule 105   dfact -> EXP LPAREN fact2 RPAREN
Rule 106   dfact -> LOG LPAREN fact2 RPAREN
Rule 107   dfact -> COS LPAREN fact2 RPAREN
Rule 108   dfact -> SIN LPAREN fact2 RPAREN
Rule 109   dfact -> TAN LPAREN fact2 RPAREN
Rule 110   dfact -> ACOS LPAREN fact2 RPAREN
Rule 111   dfact -> ASIN LPAREN fact2 RPAREN
Rule 112   dfact -> ATAN LPAREN fact2 RPAREN
Rule 113   dfact -> INT LPAREN fact2 RPAREN
Rule 114   dfact -> ABS LPAREN fact2 RPAREN
Rule 115   dfact -> SQRT LPAREN fact2 RPAREN
Rule 116   dfact -> MAX LPAREN expr2 COMMA expr2 RPAREN
Rule 117   dfact -> MIN LPAREN expr2 COMMA expr2 RPAREN
Rule 118   dfact -> CMP LPAREN expr2 COMMA expr2 RPAREN
Rule 119   dfact -> EXP LPAREN expr2 RPAREN
Rule 120   dfact -> LOG LPAREN expr2 RPAREN
Rule 121   dfact -> COS LPAREN expr2 RPAREN
Rule 122   dfact -> SIN LPAREN expr2 RPAREN
Rule 123   dfact -> TAN LPAREN expr2 RPAREN
Rule 124   dfact -> ACOS LPAREN expr2 RPAREN
Rule 125   dfact -> ASIN LPAREN expr2 RPAREN
Rule 126   dfact -> ATAN LPAREN expr2 RPAREN
Rule 127   dfact -> INT LPAREN expr2 RPAREN
Rule 128   dfact -> ABS LPAREN expr2 RPAREN
Rule 129   dfact -> SQRT LPAREN expr2 RPAREN
Rule 130   dfact -> EXP LPAREN ZERO RPAREN
Rule 131   dfact -> LOG LPAREN ZERO RPAREN
Rule 132   dfact -> COS LPAREN ZERO RPAREN
Rule 133   dfact -> SIN LPAREN ZERO RPAREN
Rule 134   dfact -> TAN LPAREN ZERO RPAREN
Rule 135   dfact -> ACOS LPAREN ZERO RPAREN
Rule 136   dfact -> ASIN LPAREN ZERO RPAREN
Rule 137   dfact -> ATAN LPAREN ZERO RPAREN
Rule 138   dfact -> INT LPAREN ZERO RPAREN
Rule 139   dfact -> ABS LPAREN ZERO RPAREN
Rule 140   dfact -> SQRT LPAREN ZERO RPAREN
Rule 141   dfact -> dmin
Rule 142   dmin -> VARIABLE
Rule 143   dmin -> LPAREN expr2 RPAREN
Rule 144   dmin -> NUMBER
Rule 145   dmin -> INTEGER
Rule 146   expr2 -> expr2 PLUS term2
Rule 147   expr2 -> expr2 MINUS term2
Rule 148   expr2 -> ZERO PLUS expr2
Rule 149   expr2 -> ZERO MINUS expr2
Rule 150   expr2 -> expr2 PLUS ZERO
Rule 151   expr2 -> expr2 MINUS ZERO
Rule 152   expr2 -> ZERO PLUS ZERO
Rule 153   expr2 -> ZERO MINUS ZERO
Rule 154   expr2 -> term2
Rule 155   term2 -> term2 TIMES fact2
Rule 156   term2 -> term2 DIVIDE fact2
Rule 157   term2 -> ZERO TIMES term2
Rule 158   term2 -> ZERO DIVIDE term2
Rule 159   term2 -> term2 TIMES ZERO
Rule 160   term2 -> term2 DIVIDE ZERO
Rule 161   term2 -> ZERO TIMES ZERO
Rule 162   term2 -> ZERO DIVIDE ZERO
Rule 163   term2 -> fact2
Rule 164   fact2 -> MINUS min2
Rule 165   fact2 -> PLUS min2
Rule 166   fact2 -> MINUS ZERO
Rule 167   fact2 -> PLUS ZERO
Rule 168   fact2 -> fact2 POW fact2
Rule 169   fact2 -> fact2 POW ZERO
Rule 170   fact2 -> ZERO POW fact2
Rule 171   fact2 -> ZERO POW ZERO
Rule 172   fact2 -> MAX LPAREN fact2 COMMA fact2 RPAREN
Rule 173   fact2 -> MIN LPAREN fact2 COMMA fact2 RPAREN
Rule 174   fact2 -> CMP LPAREN fact2 COMMA fact2 RPAREN
Rule 175   fact2 -> EXP LPAREN fact2 RPAREN
Rule 176   fact2 -> LOG LPAREN fact2 RPAREN
Rule 177   fact2 -> COS LPAREN fact2 RPAREN
Rule 178   fact2 -> SIN LPAREN fact2 RPAREN
Rule 179   fact2 -> TAN LPAREN fact2 RPAREN
Rule 180   fact2 -> ACOS LPAREN fact2 RPAREN
Rule 181   fact2 -> ASIN LPAREN fact2 RPAREN
Rule 182   fact2 -> ATAN LPAREN fact2 RPAREN
Rule 183   fact2 -> INT LPAREN fact2 RPAREN
Rule 184   fact2 -> ABS LPAREN fact2 RPAREN
Rule 185   fact2 -> SQRT LPAREN fact2 RPAREN
Rule 186   fact2 -> MAX LPAREN expr2 COMMA expr2 RPAREN
Rule 187   fact2 -> MIN LPAREN expr2 COMMA expr2 RPAREN
Rule 188   fact2 -> CMP LPAREN expr2 COMMA expr2 RPAREN
Rule 189   fact2 -> EXP LPAREN expr2 RPAREN
Rule 190   fact2 -> LOG LPAREN expr2 RPAREN
Rule 191   fact2 -> COS LPAREN expr2 RPAREN
Rule 192   fact2 -> SIN LPAREN expr2 RPAREN
Rule 193   fact2 -> TAN LPAREN expr2 RPAREN
Rule 194   fact2 -> ACOS LPAREN expr2 RPAREN
Rule 195   fact2 -> ASIN LPAREN expr2 RPAREN
Rule 196   fact2 -> ATAN LPAREN expr2 RPAREN
Rule 197   fact2 -> INT LPAREN expr2 RPAREN
Rule 198   fact2 -> ABS LPAREN expr2 RPAREN
Rule 199   fact2 -> SQRT LPAREN expr2 RPAREN
Rule 200   fact2 -> EXP LPAREN ZERO RPAREN
Rule 201   fact2 -> LOG LPAREN ZERO RPAREN
Rule 202   fact2 -> COS LPAREN ZERO RPAREN
Rule 203   fact2 -> SIN LPAREN ZERO RPAREN
Rule 204   fact2 -> TAN LPAREN ZERO RPAREN
Rule 205   fact2 -> ACOS LPAREN ZERO RPAREN
Rule 206   fact2 -> ASIN LPAREN ZERO RPAREN
Rule 207   fact2 -> ATAN LPAREN ZERO RPAREN
Rule 208   fact2 -> INT LPAREN ZERO RPAREN
Rule 209   fact2 -> ABS LPAREN ZERO RPAREN
Rule 210   fact2 -> SQRT LPAREN ZERO RPAREN
Rule 211   fact2 -> min2
Rule 212   min2 -> NUMBER
Rule 213   min2 -> VARIABLE
Rule 214   min2 -> INTEGER
Rule 215   min2 -> LPAREN expr2 RPAREN

Terminals, with rules where they appear

ABS                  : 40 54 65 114 128 139 184 198 209
ACOS                 : 36 50 61 110 124 135 180 194 205
ASIN                 : 37 51 62 111 125 136 181 195 206
ATAN                 : 38 52 63 112 126 137 182 196 207
CMP                  : 30 44 104 118 174 188
COMMA                : 28 29 30 42 43 44 102 103 104 116 117 118 172 173 174 186 187 188
COS                  : 33 47 58 107 121 132 177 191 202
DERIVATE             : 71 74 75
DIVIDE               : 12 14 16 18 86 88 90 92 156 158 160 162
EXP                  : 31 45 56 105 119 130 175 189 200
INT                  : 39 53 64 113 127 138 183 197 208
INTEGER              : 70 145 214
LOG                  : 32 46 57 106 120 131 176 190 201
LPAREN               : 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 72 73 74 75 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 143 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200 201 202 203 204 205 206 207 208 209 210 215
MAX                  : 28 42 102 116 172 186
MIN                  : 29 43 103 117 173 187
MINUS                : 3 5 7 9 20 22 77 79 81 83 94 96 147 149 151 153 164 166
NUMBER               : 68 144 212
PLUS                 : 2 4 6 8 21 23 76 78 80 82 95 97 146 148 150 152 165 167
POW                  : 24 25 26 27 98 99 100 101 168 169 170 171
RPAREN               : 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 72 73 74 75 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 143 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200 201 202 203 204 205 206 207 208 209 210 215
SIN                  : 34 48 59 108 122 133 178 192 203
SQRT                 : 41 55 66 115 129 140 185 199 210
TAN                  : 35 49 60 109 123 134 179 193 204
TIMES                : 11 13 15 17 85 87 89 91 155 157 159 161
VARIABLE             : 69 142 213
ZERO                 : 4 5 6 7 8 8 9 9 13 14 15 16 17 17 18 18 22 23 25 26 27 27 56 57 58 59 60 61 62 63 64 65 66 71 73 75 78 79 80 81 82 82 83 83 87 88 89 90 91 91 92 92 96 97 99 100 101 101 130 131 132 133 134 135 136 137 138 139 140 148 149 150 151 152 152 153 153 157 158 159 160 161 161 162 162 166 167 169 170 171 171 200 201 202 203 204 205 206 207 208 209 210
error                : 

Nonterminals, with rules where they appear

dexpr                : 74
dfact                : 93
dmin                 : 141
dterm                : 84
expr                 : 1 2 3 4 5 6 7 42 42 43 43 44 44 45 46 47 48 49 50 51 52 53 54 55 72
expr2                : 76 77 78 79 80 81 116 116 117 117 118 118 119 120 121 122 123 124 125 126 127 128 129 143 146 147 148 149 150 151 186 186 187 187 188 188 189 190 191 192 193 194 195 196 197 198 199 215
fact                 : 11 12 19 24 24 25 26 28 28 29 29 30 30 31 32 33 34 35 36 37 38 39 40 41
fact2                : 85 86 98 98 99 100 102 102 103 103 104 104 105 106 107 108 109 110 111 112 113 114 115 155 156 163 168 168 169 170 172 172 173 173 174 174 175 176 177 178 179 180 181 182 183 184 185
min                  : 20 21 67
min2                 : 94 95 164 165 211
statement            : 0
term                 : 2 3 10 11 12 13 14 15 16
term2                : 76 77 85 86 87 88 89 90 146 147 154 155 156 157 158 159 160


Parsing method: LALR


state 0

    (0) S' -> . statement
    (1) statement -> . expr
    (2) expr -> . expr PLUS term
    (3) expr -> . expr MINUS term
    (4) expr -> . ZERO PLUS expr
    (5) expr -> . ZERO MINUS expr
    (6) expr -> . expr PLUS ZERO
    (7) expr -> . expr MINUS ZERO
    (8) expr -> . ZERO PLUS ZERO
    (9) expr -> . ZERO MINUS ZERO
    (10) expr -> . term
    (11) term -> . term TIMES fact
    (12) term -> . term DIVIDE fact
    (13) term -> . term TIMES ZERO
    (14) term -> . term DIVIDE ZERO
    (15) term -> . ZERO TIMES term
    (16) term -> . ZERO DIVIDE term
    (17) term -> . ZERO TIMES ZERO
    (18) term -> . ZERO DIVIDE ZERO
    (19) term -> . fact
    (20) fact -> . MINUS min
    (21) fact -> . PLUS min
    (22) fact -> . MINUS ZERO
    (23) fact -> . PLUS ZERO
    (24) fact -> . fact POW fact
    (25) fact -> . fact POW ZERO
    (26) fact -> . ZERO POW fact
    (27) fact -> . ZERO POW ZERO
    (28) fact -> . MAX LPAREN fact COMMA fact RPAREN
    (29) fact -> . MIN LPAREN fact COMMA fact RPAREN
    (30) fact -> . CMP LPAREN fact COMMA fact RPAREN
    (31) fact -> . EXP LPAREN fact RPAREN
    (32) fact -> . LOG LPAREN fact RPAREN
    (33) fact -> . COS LPAREN fact RPAREN
    (34) fact -> . SIN LPAREN fact RPAREN
    (35) fact -> . TAN LPAREN fact RPAREN
    (36) fact -> . ACOS LPAREN fact RPAREN
    (37) fact -> . ASIN LPAREN fact RPAREN
    (38) fact -> . ATAN LPAREN fact RPAREN
    (39) fact -> . INT LPAREN fact RPAREN
    (40) fact -> . ABS LPAREN fact RPAREN
    (41) fact -> . SQRT LPAREN fact RPAREN
    (42) fact -> . MAX LPAREN expr COMMA expr RPAREN
    (43) fact -> . MIN LPAREN expr COMMA expr RPAREN
    (44) fact -> . CMP LPAREN expr COMMA expr RPAREN
    (45) fact -> . EXP LPAREN expr RPAREN
    (46) fact -> . LOG LPAREN expr RPAREN
    (47) fact -> . COS LPAREN expr RPAREN
    (48) fact -> . SIN LPAREN expr RPAREN
    (49) fact -> . TAN LPAREN expr RPAREN
    (50) fact -> . ACOS LPAREN expr RPAREN
    (51) fact -> . ASIN LPAREN expr RPAREN
    (52) fact -> . ATAN LPAREN expr RPAREN
    (53) fact -> . INT LPAREN expr RPAREN
    (54) fact -> . ABS LPAREN expr RPAREN
    (55) fact -> . SQRT LPAREN expr RPAREN
    (56) fact -> . EXP LPAREN ZERO RPAREN
    (57) fact -> . LOG LPAREN ZERO RPAREN
    (58) fact -> . COS LPAREN ZERO RPAREN
    (59) fact -> . SIN LPAREN ZERO RPAREN
    (60) fact -> . TAN LPAREN ZERO RPAREN
    (61) fact -> . ACOS LPAREN ZERO RPAREN
    (62) fact -> . ASIN LPAREN ZERO RPAREN
    (63) fact -> . ATAN LPAREN ZERO RPAREN
    (64) fact -> . INT LPAREN ZERO RPAREN
    (65) fact -> . ABS LPAREN ZERO RPAREN
    (66) fact -> . SQRT LPAREN ZERO RPAREN
    (67) fact -> . min
    (68) min -> . NUMBER
    (69) min -> . VARIABLE
    (70) min -> . INTEGER
    (71) min -> . DERIVATE ZERO
    (72) min -> . LPAREN expr RPAREN
    (73) min -> . LPAREN ZERO RPAREN
    (74) min -> . DERIVATE LPAREN dexpr RPAREN
    (75) min -> . DERIVATE LPAREN ZERO RPAREN

    ZERO            shift and go to state 16
    MINUS           shift and go to state 11
    PLUS            shift and go to state 12
    MAX             shift and go to state 26
    MIN             shift and go to state 3
    CMP             shift and go to state 7
    EXP             shift and go to state 5
    LOG             shift and go to state 2
    COS             shift and go to state 1
    SIN             shift and go to state 6
    TAN             shift and go to state 14
    ACOS            shift and go to state 21
    ASIN            shift and go to state 8
    ATAN            shift and go to state 15
    INT             shift and go to state 23
    ABS             shift and go to state 17
    SQRT            shift and go to state 25
    NUMBER          shift and go to state 4
    VARIABLE        shift and go to state 20
    INTEGER         shift and go to state 19
    DERIVATE        shift and go to state 10
    LPAREN          shift and go to state 18


    term                           shift and go to state 22
    min                            shift and go to state 9
    expr                           shift and go to state 24
    statement                      shift and go to state 13
    fact                           shift and go to state 27

state 1

    (33) fact -> COS . LPAREN fact RPAREN
    (47) fact -> COS . LPAREN expr RPAREN
    (58) fact -> COS . LPAREN ZERO RPAREN

    LPAREN          shift and go to state 28



state 2

    (32) fact -> LOG . LPAREN fact RPAREN
    (46) fact -> LOG . LPAREN expr RPAREN
    (57) fact -> LOG . LPAREN ZERO RPAREN

    LPAREN          shift and go to state 29



state 3

    (29) fact -> MIN . LPAREN fact COMMA fact RPAREN
    (43) fact -> MIN . LPAREN expr COMMA expr RPAREN

    LPAREN          shift and go to state 30



state 4

    (68) min -> NUMBER .

    POW             reduce using rule 68 (min -> NUMBER .)
    TIMES           reduce using rule 68 (min -> NUMBER .)
    DIVIDE          reduce using rule 68 (min -> NUMBER .)
    RPAREN          reduce using rule 68 (min -> NUMBER .)
    PLUS            reduce using rule 68 (min -> NUMBER .)
    MINUS           reduce using rule 68 (min -> NUMBER .)
    $end            reduce using rule 68 (min -> NUMBER .)
    COMMA           reduce using rule 68 (min -> NUMBER .)



state 5

    (31) fact -> EXP . LPAREN fact RPAREN
    (45) fact -> EXP . LPAREN expr RPAREN
    (56) fact -> EXP . LPAREN ZERO RPAREN

    LPAREN          shift and go to state 31



state 6

    (34) fact -> SIN . LPAREN fact RPAREN
    (48) fact -> SIN . LPAREN expr RPAREN
    (59) fact -> SIN . LPAREN ZERO RPAREN

    LPAREN          shift and go to state 32



state 7

    (30) fact -> CMP . LPAREN fact COMMA fact RPAREN
    (44) fact -> CMP . LPAREN expr COMMA expr RPAREN

    LPAREN          shift and go to state 33



state 8

    (37) fact -> ASIN . LPAREN fact RPAREN
    (51) fact -> ASIN . LPAREN expr RPAREN
    (62) fact -> ASIN . LPAREN ZERO RPAREN

    LPAREN          shift and go to state 34



state 9

    (67) fact -> min .

    POW             reduce using rule 67 (fact -> min .)
    TIMES           reduce using rule 67 (fact -> min .)
    DIVIDE          reduce using rule 67 (fact -> min .)
    PLUS            reduce using rule 67 (fact -> min .)
    MINUS           reduce using rule 67 (fact -> min .)
    $end            reduce using rule 67 (fact -> min .)
    RPAREN          reduce using rule 67 (fact -> min .)
    COMMA           reduce using rule 67 (fact -> min .)



state 10

    (71) min -> DERIVATE . ZERO
    (74) min -> DERIVATE . LPAREN dexpr RPAREN
    (75) min -> DERIVATE . LPAREN ZERO RPAREN

    ZERO            shift and go to state 35
    LPAREN          shift and go to state 36



state 11

    (20) fact -> MINUS . min
    (22) fact -> MINUS . ZERO
    (68) min -> . NUMBER
    (69) min -> . VARIABLE
    (70) min -> . INTEGER
    (71) min -> . DERIVATE ZERO
    (72) min -> . LPAREN expr RPAREN
    (73) min -> . LPAREN ZERO RPAREN
    (74) min -> . DERIVATE LPAREN dexpr RPAREN
    (75) min -> . DERIVATE LPAREN ZERO RPAREN

    ZERO            shift and go to state 38
    NUMBER          shift and go to state 4
    VARIABLE        shift and go to state 20
    INTEGER         shift and go to state 19
    DERIVATE        shift and go to state 10
    LPAREN          shift and go to state 18


    min                            shift and go to state 37

state 12

    (21) fact -> PLUS . min
    (23) fact -> PLUS . ZERO
    (68) min -> . NUMBER
    (69) min -> . VARIABLE
    (70) min -> . INTEGER
    (71) min -> . DERIVATE ZERO
    (72) min -> . LPAREN expr RPAREN
    (73) min -> . LPAREN ZERO RPAREN
    (74) min -> . DERIVATE LPAREN dexpr RPAREN
    (75) min -> . DERIVATE LPAREN ZERO RPAREN

    ZERO            shift and go to state 40
    NUMBER          shift and go to state 4
    VARIABLE        shift and go to state 20
    INTEGER         shift and go to state 19
    DERIVATE        shift and go to state 10
    LPAREN          shift and go to state 18


    min                            shift and go to state 39

state 13

    (0) S' -> statement .




state 14

    (35) fact -> TAN . LPAREN fact RPAREN
    (49) fact -> TAN . LPAREN expr RPAREN
    (60) fact -> TAN . LPAREN ZERO RPAREN

    LPAREN          shift and go to state 41



state 15

    (38) fact -> ATAN . LPAREN fact RPAREN
    (52) fact -> ATAN . LPAREN expr RPAREN
    (63) fact -> ATAN . LPAREN ZERO RPAREN

    LPAREN          shift and go to state 42



state 16

    (4) expr -> ZERO . PLUS expr
    (5) expr -> ZERO . MINUS expr
    (8) expr -> ZERO . PLUS ZERO
    (9) expr -> ZERO . MINUS ZERO
    (15) term -> ZERO . TIMES term
    (16) term -> ZERO . DIVIDE term
    (17) term -> ZERO . TIMES ZERO
    (18) term -> ZERO . DIVIDE ZERO
    (26) fact -> ZERO . POW fact
    (27) fact -> ZERO . POW ZERO

    PLUS            shift and go to state 45
    MINUS           shift and go to state 47
    TIMES           shift and go to state 44
    DIVIDE          shift and go to state 43
    POW             shift and go to state 46



state 17

    (40) fact -> ABS . LPAREN fact RPAREN
    (54) fact -> ABS . LPAREN expr RPAREN
    (65) fact -> ABS . LPAREN ZERO RPAREN

    LPAREN          shift and go to state 48



state 18
